--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@formspree/react": "^2.4.1",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
     "aos": "^2.3.4",
@@ -39,9 +40,9 @@
     "formik": "^2.2.6",
     "history": "^5.0.0",
     "prop-types": "^15.8.1",
-    "react": "^18.1.0",
+    "react": "^17.0.2",
     "react-countup": "^6.2.0",
-    "react-dom": "^18.1.0",
+    "react-dom": "^17.0.2",
     "react-image-lightbox": "^5.1.4",
     "react-lazy-load-image-component": "^1.5.4",
     "react-router-dom": "^6.3.0",
